--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "build-check": "npm run lint && tsc --noEmit && npm run build"
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "quality": "eslint app components lib", 
+  "build-check": "npm run quality && tsc --noEmit && npm run build",
+  "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
